# llmenv

./: .gitignore  .yamlfmt  Makefile  README.md  biome-metadata.json  biome-metadata.yaml  biome-relationships.csv  biome-relationships.tsv  biome_minus_aquatic.rq  biome_minus_aquatic_oaklib.py  biosample_json_to_context_tsv.py  cborg_test.py  count_biosample_context_vals_from_postgres.py  detect_curies_in_subset.py  env_broad_scale.json  envo_info.csv  established_subset_enums.json  established_subset_enums.yaml  fetch_ncbi_biosamples.py  filename-to-content-prompt.py  filename-to-content-prompt.txt  find_envo_present_no_curie_extracted.py  from_chatgpt.py  get_extension_unique_slots.py  llm-response.md  load_tsv_into_postgres.py  merge_in_reference_data.py  mixs_extensions.json  mixs_extensions.yaml  ncbI-packages_csv_report.py  ncbi_biosamples_context_value_counts.csv  ncbi_biosamples_context_value_counts_normalized.csv  normalize_envo_data.py  or_boolean_columns.py  packages_counts.sql  predict_extension.py  pyproject.toml  random_sample_resources.py  runoak_help.txt  runoak_relationships_help.txt  (+4 more)
local/: .env.template
never_clean/: SAMEA104726483.json  biome-minus-aquatic-vs-established.yaml  isd-notes.md  nmdc_production_biosamples_json_to_context_annotated.csv  non_attribute_metadata_202408071525.tsv  non_attribute_metadata_ncbi_attributes_all_long_202408071507.tsv  non_attribute_metadata_ncbi_attributes_all_long_202408071511.tsv  packages_counts.csv
old/: biome_minus_aquatic_2.rq  biome_minus_aquatic_orig.rq  forest_grassland_shrubland_excl_aquatic.py  (+2 more)
